# attribute-models

./: CMakeLists.txt  library.cpp  library.h
examples/common/: .gitignore  CMakeLists.txt
examples/common/src/: main.cpp
examples/common/src/models/: Model.cpp  Model.h
examples/common/src/remove_child/: main.cpp
src/attribute/: AttributeNode.cpp  AttributeNode.h  AttributeTree.cpp  AttributeTree.h  HasAttributes.h  IAttributeModel.h  index.h  types.h
src/serializers/: ISerializer.h  index.h
src/serializers/PlainSerializer/: PlainSerializer.cpp  PlainSerializer.h
